# Cpp_projects

./: .gitignore
01_StudentManagementSystem/: CMakeLists.txt  README.md  main.cpp
01_StudentManagementSystem/cmake/: AddGoogleTest.cmake
01_StudentManagementSystem/inc/: CRUD.h  DataHandler.h  FileManager.h  Student.h  StudentManager.h
01_StudentManagementSystem/src/: CRUD.cpp  DataHandler.cpp  FileManager.cpp  Student.cpp  StudentManager.cpp
01_StudentManagementSystem/tests/: CMakeLists.txt  test_CRUD.cpp  test_DataHandler.cpp  test_FileManager.cpp  test_Student.cpp  test_StudentManager.cpp
